                  which displays all FileRefs (so feel free to fill it).
                - the field 'filedata' has now a max_length equal 500 (it was 200 previously).
                  As the previous value was smaller than 'documents.Document.filedata.max_length',
                  it could cause issue when deleting a Document with a long name.
        # In 'creme_core.utils' :
            - The 'CremeDiscoverRunner.setup_databases' method has been updated to prevent running
              the 'creme_populate' command on the default test database when the test suite is launched in
              parallel mode. This change is done to prevent cache leaking when the test processes are forked.
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
            * Activities:
                - New FullCalendarBrick base class for implementation of calendar bricks.
                - Refactor of creme.ActivityCalendar :
                    - Add headlessMode flag.
                    - Add allowEventOverlaps property (boolean or method).
                    - Add allowEventCreate property (boolean).
            * Geolocation:
                - The urls used in brick controllers can be now overrided in python : do not require to override an entire template.
                    - DetailMapBrick.update_address_url
                    - FilteredMapBrick.addresses_url
                    - NeighboursMapBrick.neighbours_url
                - Markers with custom icons are now supported in maps:
                    - New registry geomarker_icon_registry allows to register an icon for a model.
                    - New setting key 'geolocation-use_entity_icon_key' enables the feature.
                - JSON data of creme.geolocation.PersonsBrick() controller is stored in a script (see {% jsondata %})