@@ -197,6 +197,7 @@
                 - the field 'filedata' has now a max_length equal 500 (it was 200 previously).
                   As the previous value was smaller than 'documents.Document.filedata.max_length',
                   it could cause issue when deleting a Document with a long name.
+        # A new method 'creme_core.tests.base._CremeTestCase.clear_global_info()' has been added.
         # In 'creme_core.utils' :
             - The 'CremeDiscoverRunner.setup_databases' method has been updated to prevent running
               the 'creme_populate' command on the default test database when the test suite is launched in
